name:               myblog
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.13.*
                  , pandoc == 2.9.2.1
                  , blaze-html == 0.9.1.2
  ghc-options:      -threaded
  default-language: Haskell2010
